# --CLionProjects

.tmp.driveupload/: 100001  100003  100005  100007  100009  100013  100015  100017  100019  100021  100023  100025  100027  100029  100031  100033  100035  100039  100041  100043  100045  100047  100049  100051  100053  100055  100057  100059  100061  100063  100065  100067  100071  100073  100075  100077  100079  100081  100083  100085  (+3445 more)
C++Basics/: course-info.yaml  course-remote-info.yaml
C++Basics/MemoryManagement/LinkedList/: lesson-info.yaml
C++Basics/WarmUp/MovingOn/: lesson-info.yaml
C++Basics/sfml/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
C++Basics/sfml/sfml-build/: Makefile  SFML.cbp  SFMLStaticTargets.cmake  cmake_install.cmake
C++Basics/test-framework/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
C++Basics/test-framework/googletest-build/: Makefile  (+3 more)
Embedded C++/: CMakeLists.txt  README.md  course-info.yaml  course-remote-info.yaml
Embedded C++/From Java to Cplusplus/: section-info.yaml  section-remote-info.yaml
Embedded C++/From Java to Cplusplus/Building And Running Process/Program generation flow/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
Embedded C++/From Java to Cplusplus/Naming/Files/: CMakeLists.txt  task-info.yaml  task-remote-info.yaml  task.md
Embedded C++/From Java to Cplusplus/Naming/Files/src/: main.cpp  point.cpp  point.hpp
Embedded C++/Improving Code Quality/: section-info.yaml  section-remote-info.yaml
c-programming-for-beginners-/: Basic.c  CMakeLists.txt
(+437 files in other folders)
